Drill-down dans les stats sur les chercheurs
Demande #1172

--- a/auf_savoirs_en_partage/templates/admin/chercheurs/chercheur/change_list.html
+++ b/auf_savoirs_en_partage/templates/admin/chercheurs/chercheur/change_list.html
@@ -10,6 +10,7 @@
     {% filter_membre_instance_auf %}
     {% filter_discipline %}
     {% filter_region %}
+    {% filter_nord_sud %}
     {% filter_pays %}
     {% filter_groupe %}
     {% filter_expert %}
