--- a/auf_savoirs_en_partage/templates/savoirs/actualite_index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/actualite_index.html
@@ -22,7 +22,12 @@
 </form>
 
 <h2>Résultats</h2>
-<div class="sous-titre">{{ nb_resultats }} actualités correspondant à votre recherche</div>
+<div class="sous-titre">
+    {{ nb_resultats }} actualités correspondant à votre recherche
+    {% if user.is_authenticated %}
+    (<a href="{% url sauvegarder_recherche "actualites" %}?{{ request.META.QUERY_STRING }}">Sauvegarder cette recherche</a>)
+    {% endif %}
+</div>
 
 <div class="pagination">{% paginate %}</div>
 {% for actualite in actualites %}
