--- a/auf_savoirs_en_partage/templates/chercheurs/index.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/index.html
@@ -27,6 +27,7 @@
 <h2>Résultats</h2>
 <div class="sous-titre"> 
     {{ nb_chercheurs }} chercheurs correspondant à votre recherche
+    (<a href="{% url rss_chercheurs %}?{{ request.META.QUERY_STRING }}">Fil RSS</a>)
     {% if user.is_authenticated %}
     (<a href="{% url sauvegarder_recherche "chercheurs" %}?{{ request.META.QUERY_STRING }}">Sauvegarder cette recherche</a>)
     {% endif %}
