--- a/auf_savoirs_en_partage/templates/savoirs/actualite_index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/actualite_index.html
@@ -7,7 +7,6 @@
 
 <ul class="actions">
     <li><a href="{% url aide %}#actualites">Aide</a></li>
-    <li><a href="/rss/actualites">Fil RSS</a></li>
 </ul>
 
 {{ entete|safe }}
@@ -24,6 +23,7 @@
 <h2>Résultats</h2>
 <div class="sous-titre">
     {{ nb_resultats }} actualités correspondant à votre recherche
+    (<a href="{% url rss_actualites %}?{{ request.META.QUERY_STRING }}">Fil RSS</a>)
     {% if user.is_authenticated %}
     (<a href="{% url sauvegarder_recherche "actualites" %}?{{ request.META.QUERY_STRING }}">Sauvegarder cette recherche</a>)
     {% endif %}
