--- a/auf_savoirs_en_partage/templates/savoirs/ressource_index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/ressource_index.html
@@ -23,6 +23,7 @@
 <h2>Résultats</h2>
 <div class="sous-titre">
     {{ nb_resultats }} ressources correspondant à votre recherche
+    (<a href="{% url rss_ressources %}?{{ request.META.QUERY_STRING }}">Fil RSS</a>)
     {% if user.is_authenticated %}
     (<a href="{% url sauvegarder_recherche "ressources" %}?{{ request.META.QUERY_STRING }}">Sauvegarder cette recherche</a>)
     {% endif %}
