--- a/auf_savoirs_en_partage/templates/savoirs/index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/index.html
@@ -3,7 +3,10 @@
 {% block contenu %}
 <div class="demi-gauche">
     <div id="chercheurs" class="box">
-        <h1><a href="{% url chercheurs.views.index %}">Répertoire</a></h1>
+        <h1>
+            <a href="{% url chercheurs.views.index %}">Répertoire</a>
+            <a class="rss-icon" href="{% url rss_chercheurs %}"><img src="/media/img/feed.png" /></a>
+        </h1>
         
         <ul class="actions-accueil">
             <li><a href="{% url chercheurs.views.index %}">Tous les chercheurs</a></li>
@@ -27,7 +30,7 @@
     <div id="actualites" class="box">
         <h1>
             <a href="{% url actualites %}">Actualités</a>
-            <a id="rss-actualites" href="/rss/actualites"><img src="/media/img/feed.png" /></a>
+            <a class="rss-icon" href="{% url rss_actualites %}"><img src="/media/img/feed.png" /></a>
         </h1> 
         <ul class="actions-accueil">
             <li><a href="{% url actualites %}">Toutes les actualités</a></li>
@@ -50,7 +53,7 @@
     <div id="appels" class="box">
         <h1>
             <a href="{% url appels %}">Appels d'offres scientifiques</a>
-            <a id="rss-actualites" href="/rss/appels"><img src="/media/img/feed.png" /></a>
+            <a class="rss-icon" href="{% url rss_appels %}"><img src="/media/img/feed.png" /></a>
         </h1> 
         <ul class="actions-accueil">
             <li><a href="{% url appels %}">Tous les appels d'offres</a></li>
@@ -73,7 +76,10 @@
 </div>
 <div class="demi-droite">
     <div  id="ressources" class="box">
-        <h1><a href="{% url savoirs.views.ressource_index %}">Ressources</a></h1>
+        <h1>
+            <a href="{% url savoirs.views.ressource_index %}">Ressources</a>
+            <a class="rss-icon" href="{% url rss_ressources %}"><img src="/media/img/feed.png" /></a>
+        </h1>
         
         <ul class="actions-accueil">
             <li><a href="{% url savoirs.views.ressource_index %}">Toutes les ressources</a></li>
@@ -100,7 +106,7 @@
     <div id="agenda" class="box">
         <h1>
             <a href="{% url savoirs.views.evenement_index %}">Agenda</a>
-            <a id="rss-agenda" href="/rss/agenda"><img src="/media/img/feed.png" /></a>
+            <a class="rss-icon" href="{% url rss_agenda %}"><img src="/media/img/feed.png" /></a>
         </h1>
         <ul class="actions-accueil">
             <li><a href="{% url savoirs.views.evenement_index %}">Tous les évènements</a></li>
@@ -121,7 +127,10 @@
         </ul>
     </div>
     <div  id="sites" class="box">
-        <h1><a href="{% url sitotheque.views.index %}">Sites</a></h1>
+        <h1>
+            <a href="{% url sitotheque.views.index %}">Sites</a>
+            <a class="rss-icon" href="{% url rss_sites %}"><img src="/media/img/feed.png" /></a>
+        </h1>
         
         <ul class="actions-accueil">
             <li><a href="{% url sitotheque.views.index %}">Sitothèque</a></li>
