Ajustements au formulaire d'inscription pour le faire fonctionner avec Django 1.2

--- a/auf_savoirs_en_partage/templates/chercheurs/password_reset_form.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/password_reset_form.html
@@ -4,6 +4,7 @@
 <div class="cadre">
     <h1>Demande de changement de mot de passe</h1>
     <form method="post">
+        {% csrf_token %}
         <p>Veuillez entrer l'adresse électronique avec laquelle vous avez completé votre inscription.</p>
         <p>
             {{ form.email }}
