Amélioré les alertes courriel, en particulier pour les évènements
Demande #1315

--- a/auf_savoirs_en_partage/templates/savoirs/rss_evenement_description.html
+++ b/auf_savoirs_en_partage/templates/savoirs/rss_evenement_description.html
@@ -1,4 +1,4 @@
-<div>où ? : {{ obj.adresse }}, {{ obj.ville }}, {{ obj.pays.nom }}</div>
+<div>où ? : {{ obj.lieu }}</div>
 <div>quand ? : {{ obj.debut|date:"d F Y H:m" }}</div>
 <div>durée ? : {{ obj.duration_display }}</div>
 <p>quoi ? : {{ obj.description }}</p>
