Mise en place de filtre avec initiale

--- a/auf_savoirs_en_partage/templates/admin/chercheurs/chercheur/change_list.html
+++ b/auf_savoirs_en_partage/templates/admin/chercheurs/chercheur/change_list.html
@@ -1,4 +1,4 @@
-{% extends "admin/change_list.html" %}
+{% extends "alphafilter/change_list.html" %}
 {% load i18n admin_list chercheurs_admin %}
 
 {% block filters %}
@@ -17,14 +17,3 @@
 </div>
 {% endblock %}
 
-{% block pagination %}
-<p class="paginator">
-    {% for initial in initials %}
-    {% if initial == current_initial %}
-    <span class="this-page">{{ initial }}</span>
-    {% else %}
-    <a href="?{% query_string_with_initial request initial %}">{{ initial }}</a>
-    {% endif %}
-    {% endfor %}
-</p>
-{% endblock %}
