Rend le lien cliquable dans le champ source

--- a/auf_savoirs_en_partage/templates/savoirs/ressource_retrieve.html
+++ b/auf_savoirs_en_partage/templates/savoirs/ressource_retrieve.html
@@ -16,7 +16,7 @@
 {% endif %}
 
 {% if ressource.source %}
-<div><span class="label">Source:</span> {{ ressource.source }}</div>
+<div><span class="label">Source:</span> {{ ressource.source|urlize }}</div>
 {% endif %}
 
 {% if ressource.publisher %}
