--- a/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
@@ -37,10 +37,21 @@
     <table>
         {% form_field forms.chercheur.statut %}
         {% form_field forms.chercheur.diplome %}
-        {% with forms.groupes.groupes as field %}
+        {% with forms.groupes.domaines_recherche as field %}
         <tr>
             <th style="width: 150px;">
                 <a href="{% url domaines-de-recherche %}">{{ field.label }}</a>
+                {% if field.errors %}{{ field.errors }}{% endif %}
+            </th>
+            <td>{{ field }}
+            {% if field.field.help_text %}<p class="help">{{ field.field.help_text|safe }}</p>{% endif %}
+            </td>
+        </tr>
+        {% endwith %}
+        {% with forms.groupes.groupes_chercheur as field %}
+        <tr>
+            <th style="width: 150px;">
+                {{ field.label }}
                 {% if field.errors %}{{ field.errors }}{% endif %}
             </th>
             <td>{{ field }}
