--- a/auf_savoirs_en_partage/templates/container_base.html
+++ b/auf_savoirs_en_partage/templates/container_base.html
@@ -54,6 +54,7 @@
                     <div>
                         <a href="{% url savoirs.views.index %}">Accueil</a> |
                         <a href="{% url chercheurs.views.index %}">Répertoire</a> |
+                        <a href="{% url chercheurs.views.groupe_index %}">Groupes</a> |
                         <a href="{% url savoirs.views.ressource_index %}">Ressources</a> |
                         <a href="{% url actualites %}">Actualités</a> |
                         <a href="{% url appels %}">Appels d'offres</a> |
