Formattage date et inscription tu nom du groupe

--- a/auf_savoirs_en_partage/templates/chercheurs/groupe_retrieve.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/groupe_retrieve.html
@@ -28,7 +28,7 @@
 		{% endfor %}
 	</ul>
 	{% endif %}
-	<h2>Recherches prédéfinies</h2>
+	<!--<h2>Recherches prédéfinies</h2>-->
 </div>
 
 {% endblock %}
