RSS pour les messages de groupe

--- a/auf_savoirs_en_partage/templates/chercheurs/groupe_message.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/groupe_message.html
@@ -4,8 +4,10 @@
 {% block contenu %}
 {% autopaginate messages 20 %}
 
+<a class="rss-icon" href="{% url rss_messages groupe.pk %}"><img src="/media/img/feed.png" /></a>
+
 <h1>{{ groupe }}</h1>
-<p><a href="{% url groupe_messages groupe.pk %}">Retour à la page du groupe</a></p>
+<p><a href="{% url groupe_retrieve groupe.pk %}">Retour à la page du groupe</a></p>
 
 <h2>Messages</h2>
 {% if messages %}
