--- a/auf_savoirs_en_partage/templates/chercheurs/groupe_retrieve.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/groupe_retrieve.html
@@ -7,6 +7,18 @@
 
 	<p>{{ groupe.page_accueil|safe }}</p>
 
+	{% if not est_chercheur  %}
+	<p><em>Pour rejoindre ce groupe, vous devez vous <a href="{% url chercheurs.views.inscription %}">inscrire en tant que chercheur</a>.</em></p>
+	{% else %}
+		{% if not est_membre %}
+		<p><em><a href="{% url chercheurs.views.groupe_adhesion groupe.pk %}">Cliquer ici pour devenir membre</a>. Votre demande doit être approuver par le responsable du groupe.</em></p>
+		{% else %}
+			{% if not est_membre_actif %}
+			<p><em>Votre demande d'adhésion n'a pas encore été approuvé par le reponsable.</em></p>
+			{% endif %}
+		{% endif %}
+	{% endif %}
+
 	<h2>Derniers messages <a href="{% url rss_messages groupe.pk %}"><img src="/media/img/feed.png" /></a></h2>
 	{% if messages %}
 		{% for message in messages.all %}
