Dans fiche chercheur, groupe(s) de chercheurs

--- a/auf_savoirs_en_partage/templates/chercheurs/fiche.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/fiche.html
@@ -29,7 +29,7 @@
             </td>
         </tr>
         <tr>
-            <td class="label">Groupe{{ chercheur.groupes_chercheur.all|pluralize }} de chercheur:</td>
+            <td class="label">Groupe{{ chercheur.groupes_chercheur.all|pluralize }} de chercheurs:</td>
             <td>
                 <ul>
                     {% for gc in chercheur.groupes_chercheur.all %}
