Liste les recherches prédéfinies pour les groupes

--- a/auf_savoirs_en_partage/templates/chercheurs/groupe_retrieve.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/groupe_retrieve.html
@@ -46,7 +46,14 @@
 			<a href="{% url groupe_membres groupe.pk %}">Voir tous les chercheurs de ce groupe</a>
 		{% endif %}
 	{% endif %}
-	<!--<h2>Recherches prédéfinies</h2>-->
+	{% if groupe.recherches.count %}
+		<h2>Recherches prédéfinies</h2>
+		<ul>
+			{% for recherche in groupe.recherches.all %}
+			<li><a href="{{ recherche.url }}">{{ recherche }}</a></li>
+			{% endfor %}
+		</ul>
+	{% endif %}
 </div>
 
 {% endblock %}
