--- a/auf_savoirs_en_partage/templates/savoirs/evenement_index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/evenement_index.html
@@ -15,7 +15,7 @@
 <form action="" method="get">
     <table>
         {{ search_form.as_table }}
-        <tr><th></th><td><input type="submit" value="Rechercher" /></td></tr>
+        <tr><th></th><td><input type="submit" name="action" value="Rechercher" /></td></tr>
     </table>
 </form>
 
