Correction dans page des messages

--- a/auf_savoirs_en_partage/templates/chercheurs/groupe_message.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/groupe_message.html
@@ -20,7 +20,7 @@
 {% endif %}
 
 {% if est_membre_actif %}
-<h2>Nouveau message</h2>
+<a name="ajout"></a><h2>Nouveau message</h2>
 <form method="post" action="">
     <table>
         {% include "render_form.html" %}
