--- a/auf_savoirs_en_partage/templates/chercheurs/groupe_retrieve.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/groupe_retrieve.html
@@ -25,13 +25,12 @@
 	{% else %}
 	<p>Aucun message</p>
 	{% endif %}
-	<p><a href="{% url groupe_messages groupe.pk %}">
-		{% if est_membre_actif %}
-		Ajouter ou voir tous les messages
-		{% else %}
-		Voir tous les messages
-		{% endif %}
-	</a></p>
+	<p>
+	{% if est_membre_actif %}
+	<a href="{% url groupe_messages groupe.pk %}#ajout">Ajouter un message</a> | 
+	{% endif %}
+	<a href="{% url groupe_messages groupe.pk %}">Voir tous les messages</a>
+	</p>
 </div>
 
 <div style="float:left;width:270px">
