Repositionnement du bouton Groupe

--- a/auf_savoirs_en_partage/templates/chercheurs/actions.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/actions.html
@@ -4,3 +4,4 @@
 <li><a href="{% url chercheurs-login %}">Se connecter</a></li>
 <li><a href="{% url chercheurs.views.inscription %}">S'inscrire</a></li>
 {% endif %}
+<li><a href="{% url chercheurs.views.groupe_index %}">Groupe de chercheurs</a></li>
