--- a/auf_savoirs_en_partage/templates/savoirs/assigner.html
+++ b/auf_savoirs_en_partage/templates/savoirs/assigner.html
@@ -1,6 +1,13 @@
 {% extends "admin/base_site.html" %}
+{% load i18n %}
 
 {% block title %}{{titre}}{% endblock %}
+
+{% block breadcrumbs %}
+<div class="breadcrumbs">
+<a href="../../">{% trans "Home" %}</a>
+</div>
+{% endblock %}
 
 {% block content %}
 <div id="content-main">
