--- a/auf_savoirs_en_partage/templates/savoirs/assigner.html
+++ b/auf_savoirs_en_partage/templates/savoirs/assigner.html
@@ -5,7 +5,7 @@
 
 {% block breadcrumbs %}
 <div class="breadcrumbs">
-<a href="../../">{% trans "Home" %}</a>
+	<a href="{% url admin:index %}">{% trans "Home" %}</a>
 </div>
 {% endblock %}
 
