Adapter les filtres pour les chercheurs pour les groupes / domaine

--- a/auf_savoirs_en_partage/templates/admin/chercheurs/chercheur/change_list.html
+++ b/auf_savoirs_en_partage/templates/admin/chercheurs/chercheur/change_list.html
@@ -12,7 +12,8 @@
     {% filter_region %}
     {% filter_nord_sud %}
     {% filter_pays %}
-    {% filter_groupe %}
+    {% filter_groupe_chercheurs %}
+    {% filter_domaine_recherche %}
     {% filter_expert %}
 </div>
 {% endblock %}
